# cosmetics

./: .gitignore  README.md  build.py  index.html  publish_pages.py  pyproject.toml  schema.sql  validate_db.py
ExportBlock-7c65a935-7241-411b-aa9c-05481ff3f6be-Part-1/: cosmetics 30ceed79dd9f80a59762da7445aab0ae.csv  cosmetics 30ceed79dd9f80a59762da7445aab0ae.html
ExportBlock-7c65a935-7241-411b-aa9c-05481ff3f6be-Part-1/cosmetics/: Acondicionador Elvive Glycolic Glosuperstay - Cabe 33aeed79dd9f804984b7f1b7e6f63c75.html  CeraVe Moisturizing Lotion (473ml) 30ceed79dd9f80ee8304e04452a0f12e.html  Garnier Express Aclara Anti-imperfecciones Sérum ( 33beed79dd9f807c8c88dabe6fd9b88c.html  L'Oréal Elvive Dream Lengths — No Haircut Cream 30ceed79dd9f803abb85d498d22a96fb.html  La Roche Posay Anthelios Gel-crema FPS50+ (SIN COL 33beed79dd9f80859dd2dbdb28c4a9e6.html  La Roche-Posay Anthelios XL SPF 50+ Dry Touch Gel- 30ceed79dd9f80c7be74f8ebe4b3a53d.html  NIVEA Med Repair by Labello — Protector Labial FPS 31aeed79dd9f80bdbc4befc211d55a4d.html  Neotretin M Tretinoína 0 025% Crema (30g) 2dca681296554bef8b11a16514c3571a.html  Neotretin M Tretinoína 0 025% Crema (30g) 350eed79dd9f80728481cca3a2d9c81e.html  Round Lab Birch Juice Sunscreen SPF50+ (50ml) 30deed79dd9f80a8a4f4e0534cd3bb94.html  photo 1.heic  photo 2.heic  photo 4.heic  photo.heic
data/: cosmetics.db  cosmetics.db.before-jpg
features/: visor.feature
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/: visor.py
mutants/tests/: test_visor.py
src/: visor.py
tests/: test_build.py  test_visor.py
(+44 files in other folders)
