[project]
name = "cosmetics"
version = "0.1.0"
description = "Visor local read-only para inventario de cosméticos"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "streamlit",
]

[dependency-groups]
dev = [
    "mutmut",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mutmut]
source_paths = ["src/visor.py"]
pytest_add_cli_args_test_selection = ["tests"]
